# Cpluslplus_geometry

./: .clang-format  CMakeLists.txt  IShape.h  Line.cpp  Line.h  Point.cpp  Point.h  README.md  Segment.cpp  Segment.h  Vector.cpp  Vector.h  circle.h  line.h  main.cpp  point.h  polygon.h  ray.h  segment.h  vector.h
src/: IShape.cpp  circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
